# Integration-Monte-Carlo

./: .gitignore  CMakeLists.txt
Integration-Monte-Carlo/: CMakeLists.txt  README.md
MarixMultiplication/: CMakeLists.txt  Readme.md
MarixMultiplication/Data/: Random.py
MarixMultiplication/Data/1000x1000 [0..500]/: InputA.txt  InputB.txt  Random.py
MarixMultiplication/Data/3x3 Easy/: InputA.txt  InputB.txt
MarixMultiplication/src/: MPI_main.cpp.cpp  main.cpp
files/: input.txt
src/: MPI_main.cpp  main.cpp
